--- a/camera-stand.3mf/Metadata/Slic3r_PE.config
+++ b/camera-stand.3mf/Metadata/Slic3r_PE.config
@@ -160,7 +160,7 @@
 ; nozzle_diameter = 0.4
 ; only_retract_when_crossing_perimeters = 0
 ; ooze_prevention = 0
-; output_filename_format = {input_filename_base}.gcode
+; output_filename_format = {input_filename_base}_{layer_height}mm_{filament_type[0]}_{printer_model}_{print_time}.gcode
 ; overhangs = 1
 ; parking_pos_retraction = 92
 ; pause_print_gcode = M601
