--- a/camera-stand.3mf/Metadata/Slic3r_PE_model.config
+++ b/camera-stand.3mf/Metadata/Slic3r_PE_model.config
@@ -2,7 +2,7 @@
 <config>
  <object id="1" instances_count="1">
   <metadata type="object" key="name" value="camera-stand.stl"/>
-  <volume firstid="0" lastid="65">
+  <volume firstid="0" lastid="213">
    <metadata type="volume" key="name" value="camera-stand.stl"/>
    <metadata type="volume" key="volume_type" value="ModelPart"/>
    <metadata type="volume" key="matrix" value="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1"/>
@@ -10,8 +10,8 @@
    <metadata type="volume" key="source_object_id" value="0"/>
    <metadata type="volume" key="source_volume_id" value="0"/>
    <metadata type="volume" key="source_offset_x" value="55.599998474121094"/>
-   <metadata type="volume" key="source_offset_y" value="38"/>
-   <metadata type="volume" key="source_offset_z" value="4.8499999046325684"/>
+   <metadata type="volume" key="source_offset_y" value="-2"/>
+   <metadata type="volume" key="source_offset_z" value="5"/>
    <mesh edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0"/>
   </volume>
  </object>
