--- a/camera-stand.3mf/Metadata/Slic3r_PE_model.config
+++ b/camera-stand.3mf/Metadata/Slic3r_PE_model.config
@@ -2,15 +2,15 @@
 <config>
  <object id="1" instances_count="1">
   <metadata type="object" key="name" value="camera-stand.stl"/>
-  <volume firstid="0" lastid="269">
+  <volume firstid="0" lastid="351">
    <metadata type="volume" key="name" value="camera-stand.stl"/>
    <metadata type="volume" key="volume_type" value="ModelPart"/>
-   <metadata type="volume" key="matrix" value="1 0 0 0 0 2.2204460492503131e-16 -1.0000000000000002 1.4210854715202004e-14 0 1.0000000000000002 2.2204460492503131e-16 0 0 0 0 1"/>
+   <metadata type="volume" key="matrix" value="1 0 0 0 0 2.2204460492503131e-16 -1.0000000000000002 1.4210854715202004e-14 0 1.0000000000000002 2.2204460492503131e-16 7.1054273576010019e-15 0 0 0 1"/>
    <metadata type="volume" key="source_file" value="camera-stand.stl"/>
    <metadata type="volume" key="source_object_id" value="0"/>
    <metadata type="volume" key="source_volume_id" value="0"/>
    <metadata type="volume" key="source_offset_x" value="55.599998474121094"/>
-   <metadata type="volume" key="source_offset_y" value="-19.5"/>
+   <metadata type="volume" key="source_offset_y" value="-16"/>
    <metadata type="volume" key="source_offset_z" value="-25.650000095367432"/>
    <mesh edges_fixed="0" degenerate_facets="0" facets_removed="0" facets_reversed="0" backwards_edges="0"/>
   </volume>
