Switch to snug supports for a slightly faster print
I think these will be enough.

--- a/config.ini
+++ b/config.ini
@@ -239,7 +239,7 @@ support_material_interface_speed = 80%
 support_material_pattern = rectilinear
 support_material_spacing = 2
 support_material_speed = 45
-support_material_style = grid
+support_material_style = snug
 support_material_synchronize_layers = 0
 support_material_threshold = 50
 support_material_with_sheath = 0
